# kde-thumbnailer-fb2

./: CHANGELOG  CMakeLists.txt  README.md  TODO  fb2.cpp  fb2.h  fb2thumbnail.cpp  fb2thumbnail.desktop  fb2thumbnail.h
